Grouped Window list thumbnal glitch visibility fix

--- a/Cinnplified/cinnamon/cinnamon.css
+++ b/Cinnplified/cinnamon/cinnamon.css
@@ -31,22 +31,22 @@
 .window-list-item-box {
   font-weight: normal;
   font-size: 9pt;
-  border-image: url("panel-assets/item-normal.png") 4; }
+  border-image: url("assets/item-normal.png") 4; }
 
 .window-list-item-box:hover  {
-  border-image:url("panel-assets/item-hover.png") 4; }
+  border-image:url("assets/item-hover.png") 4; }
 
 .window-list-item-box:active, .window-list-item-box:checked, .window-list-item-box:focus  {
-  border-image: url("panel-assets/item-active.png") 4; }
+  border-image: url("assets/item-active.png") 4; }
 
 .window-list-item-box:checked:hover, .window-list-item-box:focus:hover, .window-list-item-box:active:hover  {
-  border-image: url("panel-assets/item-active-hover.png") 4; }
+  border-image: url("assets/item-active-hover.png") 4; }
 
 .window-list-item-demands-attention {
-  border-image: url("panel-assets/item-attention.png") 4; }
+  border-image: url("assets/item-attention.png") 4; }
 
 .window-list-item-demands-attention:hover {
-  border-image: url("panel-assets/item-attention-hover.png") 4; }
+  border-image: url("assets/item-attention-hover.png") 4; }
 
 .grouped-window-list-item-box {
   padding-bottom: 1px; }
@@ -55,20 +55,20 @@
   padding-bottom: 1px;
   border-image: url('assets/tray-pressed.png') 4; }
 
-.grouped-window-list-item-box:active, .grouped-window-list-item-box:checked, .grouped-window-list-thumbnail-menu {
+.grouped-window-list-item-box:active, .grouped-window-list-item-box:checked {
   color: white;
   border-image: url('assets/item-normal.png') 4; }
 
-.grouped-window-list-item-box:active:hover, .grouped-window-list-item-box:checked:hover, {
-  border-image: url('assets/item-hover.png') 4; }
+.grouped-window-list-item-box:active:hover {
+  border-image: url('assets/item-active-hover.png') 4; }
 
-.grouped-window-list-item-box:focus, {
+.grouped-window-list-item-box:active:focus {
   padding-bottom: 1px;
   border-image: url('assets/item-active.png') 4; }
 
-.grouped-window-list-item-box:focus:hover, .grouped-window-list-thumbnail-menu .item-box:selected {
+.grouped-window-list-item-box:focus:hover, .grouped-window-list-item-box:checked:hover {
   color: #303036;
-  border-image: url('assets/item-active-hover.png') 4; }
+  border-image: url('assets/item-hover.png') 4; }
 
 .grouped-window-list-item-demands-attention {
   font-weight: normal;
@@ -282,7 +282,7 @@ StScrollBar StBin#trough {
   border: 1px solid grey; }
 
 .expo-workspaces-name-entry#selected, .switcher-list .item-box:selected StLabel {
-  background-color: none;
+  background-color: transparent;
   border-image: url('assets/item-normal.png') 8; }
 
 .window-caption {
@@ -331,3 +331,17 @@ StScrollBar StBin#trough {
   border-bottom-width: 0px;
   border-right-width: 0px;
   border-radius: 8px 0px 0px 0px; }
+
+.grouped-window-list-thumbnail-menu {
+  color: white;
+  background-gradient-start: #4b4b4b;
+  background-gradient-end: #2b2b2b;
+  background-gradient-direction: vertical;
+  border-image: url('assets/item-normal.png') 8;
+  font-weight: bold; }
+
+.grouped-window-list-thumbnail-menu .item-box {
+  padding: 8px 8px; }
+
+.grouped-window-list-thumbnail-menu .item-box:selected {
+  border-image: url('assets/item-normal.png') 8; }
